--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,6 +77,7 @@ DefaultPlatformService=Steam
 [OnlineSubsystemSteam]
 bEnabled=true
 SteamDevAppId=480
+bInitServerOnClient=true
 
 ; If using Sessions
 ; bInitServerOnClient=true
